<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_Gang_1_315" Id="{f1982283-66dc-45ee-bcb8-24081f8ecb18}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Gang_1_315
VAR
//Light

	fbLys		: FB_Light_Type_B;
	
	stDaliSetup	: SH_Light.ST_DALI_RoomSetup := (
														byShrtAdr_Prim := 26, 
														byGrpAdr_Prim := 8, 
														eMod_Prim := E_DALIAddressType.Group, 
														//byShrtAdr_Sec := 1, 
														//byGrpAdr_Sec := 1, 
														//eMod_Sec := E_DALIAddressType.Short, 
														byShrtAdr_Supl := 45, 
														//byGrpAdr_Supl := 1,
														eMod_Supl := E_DALIAddressType.Short,
														DALI_LINE_NUM_PRIM := DALI_LINE_NUM_LIGHT, 
														DALI_LINE_NUM_SEC := 0, 
														DALI_LINE_NUM_SUPL := DALI_LINE_NUM_PENDANT);
														
	stLiveData					: SH_Light.ST_LiveData;
	bRunTuning					: BOOL;
	
	bTopButtonZone1				: BOOL;
	bTopButtonZone1_Visu		: BOOL;
	bBottomButtonZone1			: BOOL;
	bBottomButtonZone1_Visu	    : BOOL;
	bButtonZone2				: BOOL;
	bNeighborRoomsPir			: BOOL;
	fLuxOn						: REAL;
	fLuxDim						: REAL;
	tPIRDim						: TIME;
	tPIROff						: TIME;
	fOffsetSec					: REAL := 20;
	bOccupiedRoom		     	: BOOL;


// Sensor Settings	
	fbSensor						: SH_Light.FB_NIKO_P46xx_3Pcs;
	//fbSensor						: SH_Light.FB_NIKO_P46xx_2Pcs;
	//bySensorAddr				: BYTE := 3;
	arrSensorAddr				: ARRAY[1..3] OF BYTE := [14,15,16];
	bInitialize						: BOOL := TRUE;
	stDaliSensorSetup				: ST_DALI_NIKOP46SetupData := (
																nSensitivityPIRSegmentA:=bySensitivityOccupancy,
																nSensitivityPIRSegmentB:=bySensitivityOccupancy,
																nSensitivityPIRSegmentC:=bySensitivityOccupancy);
	//bInitErr							: BOOL;
	//bInitDone						: BOOL;
	arrInitErr						: ARRAY [1..3] OF BOOL;
	arrInitDone					: ARRAY [1..3] OF BOOL;
	arrSensorScales				: ARRAY [1..10] OF SH_Light.ST_DALI_SensorScaleMode := [
																							(fMeassureMaxSensor := rMeassure_Zone10, fReadMaxSensor := rRead_Zone10),
																							(fMeassureMaxSensor := rMeassure_Zone10, fReadMaxSensor := rRead_Zone10),
																							(fMeassureMaxSensor := rMeassure_Zone10, fReadMaxSensor := rRead_Zone10),
																							7(())];
																							
	bCancelHoldTimerOccupancy	: BOOL;
(*	eEventPriorityOccupancy		: E_DALIEventPriority := E_DALIEVENTPRIORITY.Middle;
	nHoldTimerOccupancy			: WORD := 5; // Value in s. 	
	nReportTimerOccupancy		: BYTE := 120; // Value in s, Preset manufacturer value
	nDeadtimeTimerOccupancy		: WORD := 100; // Value in ms, Predefined Value of DALI Standard
	bCancelHoldTimerOccupancy	: BOOL;
	nSensitivityOccupancy		: BYTE:= 3; //setting Sensivity (0..4) 0 (Off), 1 (Min), 2(Low), 3(High) and 4 (Max)

	bEnableLuxEvent				: BOOL;
	eEventPriorityBrightness	: E_DALIEventPriority := E_DALIEVENTPRIORITY.Middle;
	nDeadtimeTimerBrightness	: WORD := 1500; // Value in ms, Predefined Value of DALI Standard
	nHysteresisBrightness		: BYTE := 2; // Value in %
	nHysteresisMinBrightness	: BYTE := 10; // Absolute Value, depending on the manufacturer specific resolution
	nReportTimerBrightness		: BYTE := 120; // Value in s, Preset manufacturer value
*)
	
	//ModbusComm setup
	
	fbWriteSPLuxLevel				: SH_Light.FB_TwoVal_SelectOne_RTrigChange;
	fbWritePirDelayTIme			: SH_Light.FB_TwoVal_SelectOne_RTrigChange;
	stRoomDataPLC					: SH_Light.ST_RoomDataPLC	:=	(
																										uiPirOffDelayTime	:= 30,
																										uiSpLuxLevel			:= 500,
																										uiPirDimDelayTime	:= 15,
																										uiSpDimLuxLevel		:= 200);
																
	fbBallastOnHours					: SH_Light.FB_CountOnHours;
	bEnableHourCount				: BOOL := TRUE;
	
	//Non-persistent modbus data
	bPirActive_MB						AT%MX438.0		    : BOOL;				//bPirLys i gammel kode
	uiActLuxLevel_MB			     	AT%MB442			: UINT;				//intHMIAktueltLux i gammel kode
	uiActLightLevelPct_MB		        AT%MB446			: UINT;				//intDALI_Gruppe1_Lysniveau i gammel kode
	
	//For Conversion
	uiPirOffMinutes						: UINT;
	udTimeScaling						: UDINT := 60000;
	uiLuxOn								: UINT;
	
	//max values checks
	uiMaxLuxLevel						: UINT := 1023;
	uiMaxPirOffMinutes			     	: UINT := 180;
END_VAR

VAR CONSTANT
	Sesnor_DALI_LINE_NUM			: BYTE := 3;
	DALI_LINE_NUM_LIGHT			    : BYTE := 1;
	DALI_LINE_NUM_PENDANT	        : BYTE := 1;
	bySensitivityOccupancy			: BYTE := 4; //setting Sensivity (0..4) 0 (Off), 1 (Min), 2(Low), 3(High) and 4 (Max)
END_VAR
VAR PERSISTENT
	stPirSensorData: SH_Light.ST_DALI_Sensor;
	stTuneData: SH_Light.ST_TuneData_EX;
	
	uiPirOffDelayTime_MB		AT%MB440	    : UINT;				//intHMI_Pir_SetValue i gammel kode
	uiSPLuxLevel_MB		    	AT%MB444		: UINT;				//intHMI_Lux_SetValue i gammel kode
	uiBallastOnHours_MB	    	AT%MB448	    : UINT;				//dintHMILysbraendtimer1 i gammel kode
	byOnHoursOverflowCount			   					: BYTE;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[A_Buttons();
A_LightCtrl();
A_ModbusComm();
A_Sensor();
]]></ST>
    </Implementation>
    <Action Name="A_Buttons" Id="{9caafa67-822a-40ca-96a3-e6667eee9261}">
      <Implementation>
        <ST><![CDATA[bTopButtonZone1		:= bTopButtonZone1_Visu;
bBottomButtonZone1	:= bBottomButtonZone1_Visu;

bButtonZone2		:= GVL_EnOcean.strEnOceanSwitch_Gang_1_315_Pendler.bT2_OFF OR GVL_EnOcean.strEnOceanSwitch_Gang_1_315_Pendler.bT2_ON;
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_LightCtrl" Id="{59eecdd7-1508-4c42-a2d0-758d5502e71e}">
      <Implementation>
        <ST><![CDATA[bNeighborRoomsPir	:= 	P_Gang_1_316.stPirSensorData.bPrc OR
									P_Rum_1_325.stPirSensorData.bPrc OR
									P_Rum_1_327.stPirSensorData.bPrc OR
									P_Rum_1_328.stPirSensorData.bPrc OR
									P_Rum_1_330.stPirSensorData.bPrc OR
                                    GVL_AHDataModbus.arrAH_NeighborRoomsPir[6][0]; 

stTuneData := GVL_Skalering.stDefaultTuneData; 					
fbLys(
	nZoneID:= 1, 
	bButtonZone1:= bTopButtonZone1,
	bBottomButtonZone1 := bBottomButtonZone1, 
	bButtonZone2:= bButtonZone2,
	bNeighborRoomsPir	:=	bNeighborRoomsPir,
	bNobuttons:= TRUE, 
	fLuxOn:= fLuxOn, 
	fLuxDim:= fLuxDim, 
	tPIRDim:= tPIRDim, 
	tPIROff:= tPIROff, 
	fOffsetSec:= fOffsetSec, 
	bReInit:= , 
	stDaliSetup:= stDaliSetup, 
	ipCommunication_Prim:= P_DALI_Background.arrfbKL6821Communication[DALI_LINE_NUM_LIGHT], 
	//ipCommunication_Sec:= P_DALI_Background.arrfbKL6821Communication[DALI_LINE_NUM_LIGHT], 
	ipCommunication_Supl:= P_DALI_Background.arrfbKL6821Communication[DALI_LINE_NUM_PENDANT], 
	fMinOutputPowerLevelRoom:= 15, 
	fMaxOutputPowerLevelRoom:= 100, 
	nCycleTimeInMS:= SH_Light.DALI_Param.nPlcTaskCycleTimeInMS*nDimCmdCycleTimeFactor,  //Used only for dim. Factor=2 makes dimming smooth , 
	bRunTuning:= bRunTuning, 
	bOccupiedRoom=> , 
	bError_Prim=> , 
	nError_Prim=> , 
	stTuneData:=stTuneData , 
	stPirSensorData:= stPirSensorData, 
	stLiveData:= stLiveData);
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_ModbusComm" Id="{5e682c11-9d5a-4f0c-a555-74b6253ac0fa}">
      <Implementation>
        <ST><![CDATA[//Manage data for modbus communication

//Manage data for read-only in PLC
stRoomDataPLC.bPirActive			:= stPirSensorData.bPrc;
stRoomDataPLC.uiActLuxLevel			:= TO_UINT(TRUNC(stPirSensorData.fBrightness));
stRoomDataPLC.uiActLightLevelPct	:= TO_UINT(TRUNC(fblys.fbBallast.fActlLgtLvl_Prim));
		//stRoomDataPLC.uiActLightLevelPct	:= TO_UINT(TRUNC(fbLys.fbBallast.fActlLgtLvl_Prim)); //if only one group light control
stRoomDataPLC.uiBallastOnHours		:= uiBallastOnHours_MB; //The calculation for BallastOnHours is stored directly to the MB register below


//Assign data for read-only to MB registers
bPirActive_MB		:= stRoomDataPLC.bPirActive;
uiActLuxLevel_MB	:= stRoomDataPLC.uiActLuxLevel;

	//calculate BallastOnHours
	fbBallastOnHours(
		bEnableHourCount	:= bEnableHourCount,
		bPauseCount			:= fbLys.fbLightCtrl.bOffZone1,
		uiOnHours			:= uiBallastOnHours_MB,			//OnHours is updated here
		byOverflowCount		:= byOnHoursOverflowCount);


//Manage data for read/write for both PLC and MB registers
fbWriteSPLuxLevel(	nMaxValOut	:= uiMaxLuxLevel,
					nValIn1		:= uiSPLuxLevel_MB,		//nValIn1 takes priotity in case of download or restart
					nValIn2		:= stRoomDataPLC.uiSpLuxLevel,
					nValOut		=> uiLuxOn
				);


fbWritePirDelayTIme(	nMaxValOut	:= uiMaxPirOffMinutes,
						nValIn1		:= uiPirOffDelayTime_MB,		//nValIn1 takes priotity in case of download or restart
						nValIn2		:= stRoomDataPLC.uiPirOffDelayTime,
						nValOut		=> uiPirOffMinutes
					);
					

//Convert read/write modbus data to appropriate datatypes in PLC
fLuxOn	:= TO_REAL(uiLuxOn);			
tPIROff	:= TO_TIME(uiPirOffMinutes*udTimeScaling); //Time conversion defaults to ms

fLuxDim	:= TO_REAL(stRoomDataPLC.uiSpDimLuxLevel);			
tPIRDim	:= TO_TIME(stRoomDataPLC.uiPirDimDelayTime*udTimeScaling); //Time conversion defaults to ms
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Sensor" Id="{a7c6cb44-5a2a-4390-a127-6dd65b6c6b4e}">
      <Implementation>
        <ST><![CDATA[
fbSensor.ipCommunication := P_DALI_Background.arrfbKL6821Communication[Sesnor_DALI_LINE_NUM];

fbSensor(
	arrShrtAdr:= arrSensorAddr,
	bInitialize:= bInitialize, 
	DALI_LINE_NUM:= Sesnor_DALI_LINE_NUM, 
 	//bCancelHoldTimerOccupancy:= bCancelHoldTimerOccupancy, 
	stSensorSetup := stDaliSensorSetup,
	arrInitErr=> arrInitErr, 
	arrInitDone=> arrInitDone,
	stPirSensorData:= stPirSensorData, 
	arrSensorScales:= arrSensorScales);
	]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>